--- a/my-app/package.json
+++ b/my-app/package.json
@@ -13,7 +13,11 @@
     "preset": "jest-expo"
   },
   "dependencies": {
+    "@expo-google-fonts/roboto": "^0.2.3",
     "@expo/vector-icons": "^14.0.2",
+    "@gluestack-style/react": "^1.0.57",
+    "@gluestack-ui/config": "^1.1.19",
+    "@gluestack-ui/themed": "^1.1.34",
     "@react-navigation/native": "^6.0.2",
     "expo": "~51.0.28",
     "expo-font": "~12.0.9",
@@ -29,6 +33,7 @@
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
+    "react-native-svg": "^13.14.1",
     "react-native-web": "~0.19.10"
   },
   "devDependencies": {
