--- a/my-app/package.json
+++ b/my-app/package.json
@@ -7,10 +7,25 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "test": "jest --watchAll"
+    "test": "jest --watch --coverage=false --changedSince=origin/main",
+    "testDebug": "jest -o --watch --coverage=false",
+    "testFinal": "jest",
+    "updateSnapshots": "jest -u --coverage=false"
   },
   "jest": {
-    "preset": "jest-expo"
+    "preset": "jest-expo",
+    "transformIgnorePatterns": [
+      "node_modules/(?!((jest-)?react-native|@react-native(-community)?)|expo(nent)?|@expo(nent)?/.|@expo-google-fonts/.|react-navigation|@react-navigation/.*|@sentry/react-native|native-base|react-native-svg)"
+    ],
+    "collectCoverage": true,
+    "collectCoverageFrom": [
+      "*/.{ts,tsx,js,jsx}",
+      "!*/coverage/*",
+      "!*/node_modules/*",
+      "!**/babel.config.js",
+      "!**/expo-env.d.ts",
+      "!*/.expo/*"
+    ]
   },
   "dependencies": {
     "@expo-google-fonts/roboto": "^0.2.3",
@@ -22,6 +37,7 @@
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/native-stack": "^6.11.0",
     "@react-navigation/stack": "^6.4.1",
+    "@testing-library/react-native": "^12.7.2",
     "expo": "~51.0.28",
     "expo-font": "~12.0.9",
     "expo-linking": "~6.3.1",
@@ -43,8 +59,9 @@
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "@types/jest": "^29.5.13",
     "@types/react": "~18.2.45",
-    "jest": "^29.2.1",
+    "jest": "^29.7.0",
     "jest-expo": "~51.0.3",
     "react-native-svg-transformer": "^1.5.0",
     "react-test-renderer": "18.2.0",
